--- a/.github/ISSUE_TEMPLATE/2-feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/2-feature-request.yml
@@ -1,5 +1,5 @@
 name: Feature request
-description: Suggest an improvement for the Inazuma Guide
+description: Suggest an improvement for the Inazuma Guide Wiki
 labels: ["enhancement"]
 body:
   - type: markdown
