Improved team builder

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "fflate": "^0.8.2",
     "gzip": "^0.1.0",
+    "html-to-image": "^1.11.13",
     "jotai": "^2.13.1",
     "lucide-react": "^0.555.0",
     "react": "^19.1.1",
